// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Select Disabled Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-v1ceom-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={true}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-416u9w-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={true}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-1oveast-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={true}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="elevated"
                  value=""
                />
                <label
                  className="css-1yedgls-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-19bjb4x-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-bzlo54"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-19bjb4x-TextInputWrapper"
            >
              <div
                className="css-g5h1c4-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-bzlo54"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-g5h1c4-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <img
                  height="16"
                  src="https://brandmark.io/logo-rank/random/pepsi.png"
                  style={
                    Object {
                      "background": "red",
                    }
                  }
                  width="16"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Select with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-lsujln-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="error"
                      styleType="filled"
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-y2q41j-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-1xeanin-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="error"
                      styleType="outlined"
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-y2q41j-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-u1rsfx-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="error"
                      styleType="elevated"
                      value="Chocolate"
                    />
                    <label
                      className="css-10njz0b-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-y2q41j-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-hnerwf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-ptimel-Stack"
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-hzcvm6-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="hint"
                      styleType="filled"
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-lxhvoy-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-xp95x8-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="hint"
                      styleType="outlined"
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-lxhvoy-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            role="button"
          >
            <div
              className="css-dz29m7-TextInputWrapper"
            >
              <div
                className="css-15ow8ps-TextInputWrapper"
              >
                <div
                  className="css-1il6azq-TextInputWrapper"
                >
                  <div
                    className="css-1u4znjd"
                  >
                    <input
                      className="css-1h245c6"
                      disabled={false}
                      hintMsg="Error in Select"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Label"
                      required={false}
                      status="hint"
                      styleType="elevated"
                      value=""
                    />
                    <label
                      className="css-1yedgls-Label"
                    >
                      Label
                       
                    </label>
                  </div>
                  <div
                    className="css-mt0mcx-IconWrapper"
                  >
                    <span
                      className="css-1gnbc76-Icon"
                      onClick={[Function]}
                    >
                      <span
                        className="css-z7hcm5-Icon"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-lxhvoy-TextInputWrapper"
            >
              <span
                className="css-1gnbc76-Icon"
                onClick={[Function]}
              >
                <span
                  className="css-18ctimf-Icon"
                />
              </span>
              Error in Select
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Select Simple Select 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-hzcvm6-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="filled"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-xp95x8-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="outlined"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="css-dz29m7-TextInputWrapper"
        >
          <div
            className="css-15ow8ps-TextInputWrapper"
          >
            <div
              className="css-1il6azq-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-1h245c6"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Flavour"
                  required={false}
                  status="normal"
                  styleType="elevated"
                  value="Chocolate"
                />
                <label
                  className="css-10njz0b-Label"
                >
                  Flavour
                   
                </label>
              </div>
              <div
                className="css-mt0mcx-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-z7hcm5-Icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
